crates/rome_analyze/tests/specs/validTypeof.js.snap
---
source: crates/rome_analyze/tests/spec_tests.rs
expression: validTypeof.js
---
# Input
```js
// Valid Cases
typeof foo === "string"
typeof bar == "undefined"
typeof bar === typeof qux

// Invalid literals
typeof foo === "strnig"
typeof foo == "undefimed"
typeof bar != "nunber"
typeof bar !== "fucntion"

// Invalid expressions
typeof foo === undefined
typeof bar == Object
typeof foo === baz
typeof foo == 5
typeof foo == -5

```

# Diagnostics
```
error[validTypeof]: Invalid typeof comparison value
  ┌─ validTypeof.js:7:1
  │
7 │ typeof foo === "strnig"
  │ ^^^^^^^^^^^^^^^^^^^^^^^ Invalid typeof comparison value


```

```
error[validTypeof]: Invalid typeof comparison value
  ┌─ validTypeof.js:8:1
  │
8 │ typeof foo == "undefimed"
  │ ^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid typeof comparison value


```

```
error[validTypeof]: Invalid typeof comparison value
  ┌─ validTypeof.js:9:1
  │
9 │ typeof bar != "nunber"
  │ ^^^^^^^^^^^^^^^^^^^^^^ Invalid typeof comparison value


```

```
error[validTypeof]: Invalid typeof comparison value
   ┌─ validTypeof.js:10:1
   │
10 │ typeof bar !== "fucntion"
   │ ^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid typeof comparison value


```

```
error[validTypeof]: Invalid typeof comparison value
   ┌─ validTypeof.js:13:1
   │
13 │ typeof foo === undefined
   │ ^^^^^^^^^^^^^^^^^^^^^^^^ Invalid typeof comparison value

Compare the result of `typeof` with a valid type name
      | @@ -10,7 +10,7 @@
 9  9 |   typeof bar !== "fucntion"
10 10 |   
11 11 |   // Invalid expressions
12    | - typeof foo === undefined
   12 | + typeof foo === "undefined"
13 13 |   typeof bar == Object
14 14 |   typeof foo === baz
15 15 |   typeof foo == 5


```

```
error[validTypeof]: Invalid typeof comparison value
   ┌─ validTypeof.js:14:1
   │
14 │ typeof bar == Object
   │ ^^^^^^^^^^^^^^^^^^^^ Invalid typeof comparison value

Compare the result of `typeof` with a valid type name
      | @@ -11,7 +11,7 @@
10 10 |   
11 11 |   // Invalid expressions
12 12 |   typeof foo === undefined
13    | - typeof bar == Object
   13 | + typeof bar == "object"
14 14 |   typeof foo === baz
15 15 |   typeof foo == 5
16 16 |   typeof foo == -5


```

```
error[validTypeof]: Invalid typeof comparison value
   ┌─ validTypeof.js:15:1
   │
15 │ typeof foo === baz
   │ ^^^^^^^^^^^^^^^^^^ Invalid typeof comparison value


```

```
error[validTypeof]: Invalid typeof comparison value
   ┌─ validTypeof.js:16:1
   │
16 │ typeof foo == 5
   │ ^^^^^^^^^^^^^^^ Invalid typeof comparison value


```

```
error[validTypeof]: Invalid typeof comparison value
   ┌─ validTypeof.js:17:1
   │
17 │ typeof foo == -5
   │ ^^^^^^^^^^^^^^^^ Invalid typeof comparison value


```


